<resources>
    <string name="no_data">Check your permission</string>
    <string name="app_name">SystemInfo</string>
    <string name="item_android">Android</string>
    <string name="item_system">System/Env</string>
    <string name="item_screen">Screen</string>
    <string name="item_memory">Memory</string>
    <string name="item_storage">Storage</string>
    <string name="item_phone">Telephone</string>
    <string name="item_sensor">Sensors</string>
    <string name="item_input">Input devices</string>
    <string name="item_connectivity">Connectivity</string>
    <string name="item_network">Networks</string>
    <string name="item_location">Location providers</string>
    <string name="item_camera">Camera</string>
    <string name="item_opengl">OpenGL</string>
    <string name="item_drm">DRM engines</string>
    <string name="item_account">Accounts</string>
    <string name="item_policy">Device Policy</string>
    <string name="item_codec">Multimedia codec</string>
    <string name="item_security">Security providers</string>
    <string name="item_locale">Supported Locales</string>
    <string name="item_about">About this app</string>
    <string name="android_board">Board</string>
    <string name="android_bootloader">Bootloader version</string>
    <string name="android_brand">Brand</string>
    <string name="android_device">Device</string>
    <string name="android_display">Build ID</string>
    <string name="android_fingerprint">Fingerprint</string>
    <string name="android_hardware">Hardware</string>
    <string name="android_host">Host</string>
    <string name="android_id">Build label</string>
    <string name="android_manufacturer">Manufacturer</string>
    <string name="android_model">Model</string>
    <string name="android_product">Product</string>
    <string name="android_serial">H/W Serial number</string>
    <string name="android_tags">Tags</string>
    <string name="android_type">Type</string>
    <string name="android_radio">Radio version</string>
    <string name="android_codename">Codename</string>
    <string name="android_incremental">Incremental</string>
    <string name="android_release">Android version</string>
    <string name="android_sdk">SDK version</string>
    <string name="android_time">Build Time</string>
    <string name="android_secure_id">Android_id</string>
    <string name="android_supported_abis">Supported ABIs</string>
    <string name="android_supported_32bit_abis">Supported 32bit ABIs</string>
    <string name="android_supported_64bit_abis">Supported 64bit ABIs</string>
    <string name="android_base_os">Base OS</string>
    <string name="android_preview_sdk">Preview SDK version</string>
    <string name="system_processors">Available processors</string>
    <string name="screen_count">Number of display</string>
    <string name="screen_logical_density">Logical density</string>
    <string name="screen_dpi">Density (dpi)</string>
    <string name="screen_physical_dpi">Physical DPI</string>
    <string name="screen_scaled_density">Scaled density</string>
    <string name="screen_id">Display ID</string>
    <string name="screen_name">Display name</string>
    <string name="screen_pixel_format">Pixel format</string>
    <string name="screen_available_size">Available size in pixels</string>
    <string name="screen_real_size">Real size in pixels</string>
    <string name="screen_refresh_rate">Refresh rate</string>
    <string name="screen_rotation">Rotation</string>
    <string name="screen_logical_size">Logical size</string>
    <string name="screen_logical_size_in_dp">Physical size (dp)</string>
    <string name="screen_physical_size_in_inch">Physical size (Inch)</string>
    <string name="screen_app_vsync_offset">Application VSYNC offset (ns)</string>
    <string name="screen_presentation_deadline">Presentation deadline (ns)</string>
    <string name="screen_supported_refresh_rates">Supported refresh rates</string>
    <string name="screen_smallest_width_dp">Smallest width (dp)</string>
    <string name="screen_ui_mode">UI mode</string>
    <string name="screen_layout_direction">Layout direction</string>
    <string name="screen_size_small">Small (%1$d)</string>
    <string name="screen_size_normal">Normal (%1$d)</string>
    <string name="screen_size_large">Large (%1$d)</string>
    <string name="screen_size_xlarge">X-Large (%1$d)</string>
    <string name="screen_size_undefined">Undefined (%1$d)</string>
    <string name="screen_mode_type_appliance">Appliance (%1$d)</string>
    <string name="screen_mode_type_car">Car (%1$d)</string>
    <string name="screen_mode_type_desk">Appliance (%1$d)</string>
    <string name="screen_mode_type_normal">Normal (%1$d)</string>
    <string name="screen_mode_type_television">Television (%1$d)</string>
    <string name="screen_mode_type_watch">Watch (%1$d)</string>
    <string name="screen_mode_type_undefined">Undefined (%1$d)</string>
    <string name="screen_night_no">NOT night (%1$x)</string>
    <string name="screen_night_yes">Night mode (%1$x)</string>
    <string name="screen_night_undefined">Undefined night mode (%1$x)</string>
    <string name="screen_layout_ltr">Left to right (%1$x)</string>
    <string name="screen_layout_rtl">Right to left (%1$x)</string>
    <string name="screen_state">State</string>
    <string name="screen_size_range">Size range</string>
    <string name="screen_other_features">Other features</string>
    <string name="memory_available">Available</string>
    <string name="memory_total">Total</string>
    <string name="memory_threshold">Low threshold</string>
    <string name="memory_total_pss">Total PSS</string>
    <string name="memory_total_shared">Total shared dirty</string>
    <string name="memory_total_private">Total private dirty</string>
    <string name="memory_dalvik_pss">Dalvik PSS</string>
    <string name="memory_dalvik_shared">Dalvik shared dirty</string>
    <string name="memory_dalvik_private">Dalvik private dirty</string>
    <string name="memory_native_pss">Native PSS</string>
    <string name="memory_native_shared">Native shared dirty</string>
    <string name="memory_native_private">Native private dirty</string>
    <string name="memory_other_pss">Other PSS</string>
    <string name="memory_other_shared">Other shared dirty</string>
    <string name="memory_other_private">Other private dirty</string>
    <string name="memory_runtime_free">Free in current heap</string>
    <string name="memory_runtime_max">Max heap</string>
    <string name="memory_runtime_total">Current heap</string>
    <string name="storage_external_description">External storage property</string>
    <string name="storage_emulated">&#160;(Emulated)</string>
    <string name="storage_removable">Removable</string>
    <string name="storage_non_removable">Fixed</string>
    <string name="storage_absolute_path">Absolute path</string>
    <string name="storage_total_space">Total space</string>
    <string name="storage_free_space">Free space</string>
    <string name="storage_usable_space">Usable space</string>
    <string name="storage_state">State</string>
    <string name="phone_none">No telephone capability</string>
    <string name="phone_device_id">Device ID</string>
    <string name="phone_device_software_version">Device software version</string>
    <string name="phone_group_id_l1">GSM Group Id Level-1</string>
    <string name="phone_line1_number">Phone number</string>
    <string name="phone_network_country_iso">Network country code</string>
    <string name="phone_network_operator">Network operator</string>
    <string name="phone_network_operator_name">Network operator name</string>
    <string name="phone_phone_type">Phone type</string>
    <string name="phone_network_type">Network type</string>
    <string name="phone_sim_state">SIM state</string>
    <string name="phone_sim_country_iso">SIM country code</string>
    <string name="phone_sim_operator">SIM operator</string>
    <string name="phone_sim_operator_name">SIM operator name</string>
    <string name="phone_sim_serial">SIM serial number</string>
    <string name="phone_subscriber_id">Subscriber ID</string>
    <string name="phone_voice_mail_tag">Voice mail tag</string>
    <string name="phone_voice_mail_number">Voice mail number</string>
    <string name="phone_mms_ua">MMS User Agent</string>
    <string name="phone_mms_ua_prof_url">MMS user agent profile URL</string>
    <string name="phone_phone_count">Number of phones</string>
    <string name="phone_features">Features</string>
    <string name="sensor_none">No sensor available!</string>
    <string name="sensor_name">Name</string>
    <string name="sensor_type">Type</string>
    <string name="sensor_vendor">Vendor</string>
    <string name="sensor_version">Version</string>
    <string name="sensor_power">Power consumtion</string>
    <string name="sensor_resolution">Resolution</string>
    <string name="sensor_max_range">Maximum range</string>
    <string name="sensor_delay">Delay in microsecond</string>
    <string name="sensor_batch_fifo_size">Batch FIFO size</string>
    <string name="sensor_reporting_mode">Reporting mode</string>
    <string name="sensor_batch_not_supported">Batch mode not supported</string>
    <string name="input_none">No input device!</string>
    <string name="input_virtual">(Virtual)</string>
    <string name="input_source">Sources</string>
    <string name="input_controller_number">Assigned controller number</string>
    <string name="input_descriptor">Descriptor</string>
    <string name="input_id">ID</string>
    <string name="input_motion_ranges">Motion ranges</string>
    <string name="input_product_id">Product ID</string>
    <string name="input_vendor_id">Vendor ID</string>
    <string name="input_other_features">Other features</string>
    <string name="connectivity_none">No connectivity!</string>
    <string name="connectivity_state">State</string>
    <string name="connectivity_extra_info">Extra information</string>
    <string name="connectivity_roaming">(roaming)</string>
    <string name="connectivity_unavailable">(unavailable)</string>
    <string name="network_none">No network!</string>
    <string name="network_name">Name:&#160;</string>
    <string name="network_mtu">Max transmission unit:&#160;</string>
    <string name="network_hardware_address">Hardware address:&#160;</string>
    <string name="network_subinterface">Subinterfaces: </string>
    <string name="network_up">(up)</string>
    <string name="network_down">(down)</string>
    <string name="location_none">No location provider!</string>
    <string name="location_accuracy">Accuracy:&#160;</string>
    <string name="location_power_req">Power requirement:&#160;</string>
    <string name="location_cost">Cost:&#160;</string>
    <string name="location_free">Free</string>
    <string name="location_may_charge">May charge</string>
    <string name="location_requires">Requires</string>
    <string name="location_req_cell">&#160;cell</string>
    <string name="location_req_network">&#160;network</string>
    <string name="location_req_satellite">&#160;satellite</string>
    <string name="camera_none">No camera!</string>
    <string name="camera_count">Number of cameras</string>
    <string name="camera_name">Camera %1$d</string>
    <string name="camera_mute_shutter_sound">Shutter sound disable</string>
    <string name="camera_allowed">Allowed</string>
    <string name="camera_not_allowed">Not allowed</string>
    <string name="camera_facing">Facing</string>
    <string name="camera_facing_back">Back (opposite to screen)</string>
    <string name="camera_facing_front">Front (same as screen)</string>
    <string name="camera_orientation">Orientation</string>
    <string name="camera_max_zoom">Max zoom</string>
    <string name="camera_supported_antibanding">Supported antibanding</string>
    <string name="camera_supported_color_effects">Supported color effects</string>
</resources>