<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/l_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView android:id="@+id/item_android"
        style="@style/ListItemText"
        android:text="@string/item_android"
        />
    <TextView android:id="@+id/item_screen"
        style="@style/ListItemText"
        android:text="@string/item_screen"
        />
    <TextView android:id="@+id/item_system"
        style="@style/ListItemText"
        android:text="@string/item_system"
        />
    <TextView android:id="@+id/item_memory"
        style="@style/ListItemText"
        android:text="@string/item_memory"
        />
    <TextView android:id="@+id/item_storage"
        style="@style/ListItemText"
        android:text="@string/item_storage"
        />
    <TextView android:id="@+id/item_phone"
        style="@style/ListItemText"
        android:text="@string/item_phone"
        />
    <TextView android:id="@+id/item_sensor"
        style="@style/ListItemText"
        android:text="@string/item_sensor"
        />
    <TextView android:id="@+id/item_input"
        style="@style/ListItemText"
        android:text="@string/item_input"
        />
    <TextView android:id="@+id/item_connectivity"
        style="@style/ListItemText"
        android:text="@string/item_connectivity"
        />
    <TextView android:id="@+id/item_network"
        style="@style/ListItemText"
        android:text="@string/item_network"
        />
    <TextView android:id="@+id/item_location"
        style="@style/ListItemText"
        android:text="@string/item_location"
        />
    <TextView android:id="@+id/item_camera"
        style="@style/ListItemText"
        android:text="@string/item_camera"
        />
    <TextView android:id="@+id/item_opengl"
        style="@style/ListItemText"
        android:text="@string/item_opengl"
        />
    <TextView android:id="@+id/item_drm"
        style="@style/ListItemText"
        android:text="@string/item_drm"
        />
    <TextView android:id="@+id/item_account"
        style="@style/ListItemText"
        android:text="@string/item_account"
        />
    <TextView android:id="@+id/item_codec"
        style="@style/ListItemText"
        android:text="@string/item_codec"
        />
    <TextView android:id="@+id/item_security"
        style="@style/ListItemText"
        android:text="@string/item_security"
        />
    <TextView android:id="@+id/item_locale"
        style="@style/ListItemText"
        android:text="@string/item_locale"
        />
    <TextView android:id="@+id/item_about"
        style="@style/ListItemText"
        android:text="@string/item_about"
        />

</LinearLayout>
